# nexus-digital-id

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
nexus_digital_id/: __init__.py  __main__.py
nexus_digital_id/authority/: __init__.py  central_command.py  org_registry.py
nexus_digital_id/compliance/: __init__.py  audit_chronicle.py  request_sentinel.py  rule_enforcer.py
nexus_digital_id/core/: __init__.py  attribute_keeper.py  identity_vault.py  status_sentinel.py
nexus_digital_id/exceptions/: __init__.py  nexus_errors.py
nexus_digital_id/interface/: __init__.py  command_deck.py
nexus_digital_id/verification/: __init__.py  basic_verifier.py  dvla_verifier.py  portal_gateway.py  tax_verifier.py
tests/: __init__.py  conftest.py  test_audit_chronicle.py  test_central_command.py  test_command_deck.py  test_identity_vault.py  test_org_registry.py  test_request_sentinel.py  test_rule_enforcer.py  test_status_sentinel.py  test_verification_services.py
